--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.2.1",
   "main": "dist/dist.css",
   "devDependencies": {
-    "debug": ">=2.6.9",
-    "grunt": "^1.0.4",
+    "grunt": "^1.0.1",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-newer": "^1.2.0",
-    "lodash": ">=4.17.19"
+    "grunt-newer": "^1.2.0"
   },
   "sn": {
     "main": "dist/dist.css"
