--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.2.1",
   "main": "dist/dist.css",
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "debug": ">=2.6.9",
+    "grunt": "^1.3.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-newer": "^1.2.0"
+    "grunt-newer": "^1.2.0",
+    "lodash": ">=4.17.21"
   },
   "sn": {
     "main": "dist/dist.css"
