--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ilindaniel/sn-theme-evernote-dark.git""
+    "url": "git://github.com/ilindaniel/sn-theme-evernote-dark.git"
   }
 }
